# src/main/java/com/mikels/citasalud/infrastructure/persistence/repository/CitaJpaRepository.java
@@ -1,5 +1,6 @@
 package com.mikels.citasalud.infrastructure.persistence.repository;
 
+import java.util.Optional;
 import java.util.UUID;
 
 import org.springframework.data.jpa.repository.JpaRepository;
@@ -7,4 +8,6 @@ import org.springframework.data.jpa.repository.JpaRepository;
 import com.mikels.citasalud.infrastructure.persistence.entity.CitaJpaEntity;
 
 public interface CitaJpaRepository extends JpaRepository<CitaJpaEntity, UUID> {
+
+    Optional<CitaJpaEntity> findByPacienteIdAndFranjaHorariaId(UUID pacienteId, UUID franjaHorariaId);
 }
